flux/infrastructure/base/garage-operator/config/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: external
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3900
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: external
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3902
